--- a/style.css
+++ b/style.css
@@ -76,3 +76,41 @@ html {
     width: 270px;
     height: 130px;
 }
+
+.latest-fnd {
+  background: gray;
+  display: flex;
+  justify-content: space-between;
+}
+
+.latest-fnd li {
+  display: inline; /*Fix the line*/
+}
+
+.funding-ctn {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.funds {
+  margin: 20px 0;
+  background: black;
+  height: 100px; /*For layout*/
+}
+
+.sec-art-ctn {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.sec-art {
+  margin-top: 40px; /*for layout*/ 
+  height: 200px; /*for layout*/
+}
+
+.sec-img > img {
+  width: 386px;
+  height: 133px;
+}
