--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ html {
     width:100%;
     margin: 0;
     padding: 0;
+    font-family: 'Archivo', sans-serif;
+    /* font-family: 'Mitr', sans-serif; */
+    /* font-family: 'Cantata One', serif; */
   }
 
 .header1 { 
@@ -136,8 +139,8 @@ html {
 }
 
 .btm-cnt > h1 {
-  font-size: 44px;
-  font-weight: bold;
+  font-size: 56px;
+  font-weight: 1000;
   padding: 0;
   margin: 0;
 }
@@ -150,7 +153,7 @@ html {
 
 .art-1-cnt {
   height: 100%;
-  background-image: linear-gradient( to right bottom, rgba(255, 67, 10, 0.85) 20%, rgba(255, 67, 10, 0.5) 60%, transparent );
+  background-image: linear-gradient( to bottom, rgb(233, 36, 95, 0.5), rgba(0, 0, 0, 1));
 }
 
 .art-other-text{
@@ -180,7 +183,7 @@ html {
 }
 
 .art-2-div {
-  background: linear-gradient( to bottom, rgba(168, 166, 166, 0.7) 40%, rgba(168, 166, 166, 0.6) 30%);
+  background: linear-gradient( to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1));
   height: 100%;
 }
 
@@ -218,7 +221,7 @@ html {
 }
 
 .art-3-div {
-  background: linear-gradient( to bottom, rgba(168, 166, 166, 0.7) 40%, rgba(168, 166, 166, 0.6) 30%);
+  background: linear-gradient( to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1));
   height: 100%;
 }
 
