--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ html {
     width:100%;
     margin: 0;
     padding: 0;
-    font-family: 'Archivo', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Archivo', sans-serif; */
     /* font-family: 'Mitr', sans-serif; */
     /* font-family: 'Cantata One', serif; */
   }
@@ -334,12 +335,6 @@ html {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
-}
-
-.div-ctn-bck {
-  /* background-image: linear-gradient( to bottom, rgba(230, 101, 129, 0.85) 20%, rgba(223, 140, 202, 0.3) 20%, transparent );
-  margin: 0;
-  padding: 0; */
 }
 
 .funds {
