--- a/style.css
+++ b/style.css
@@ -133,6 +133,12 @@ html {
   display: flex;
 }
 
+.logo-b {
+  display: none;
+  background-color: #f42;
+  background: linear-gradient(to bottom right,#c09,#f42 85%);
+}
+
 @media screen and (max-width: 800px) {
 
   .header2 > ul {
@@ -148,6 +154,15 @@ html {
     justify-content: space-between;
   }
   
+  }
+
+  @media (height: 200px) {
+    .header2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    }
+
   }
 
 .header3 {
@@ -175,6 +190,7 @@ html {
     text-decoration: none;
   }
 }
+
 .art-ctn {
   color: white;
   display: grid;
@@ -217,7 +233,7 @@ html {
 }
 
 .btm-cnt h1 {
-  font-size: 4vw;
+  font-size: 48px;
   font-weight: bold;
   padding: 0;
   margin: 0;
@@ -336,6 +352,45 @@ html {
   display: inline;
   list-style: none;
   font-size: 1vw;
+}
+
+@media screen and (max-width: 1025px) {
+  .top-cnt {
+    display: none;
+  }
+  
+  .btm-cnt h1 {
+    font-size: 40px;
+  }
+
+
+}
+
+@media screen and (max-width: 769px) {
+  .art-ctn {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 475px;
+    padding: 2px 3px;
+    width: 100%; 
+  }
+  
+  .art-1 {
+    grid-row: span 1;
+  }
+
+  .btm-cnt h1 {
+    font-size: 20px;
+  }
+
+  .art-2-ctn > p {
+    font-size: 20px
+  }
+
+  .art-3-ctn > p {
+    font-size: 20px
+  }
 }
 
 .sec-ctn {
